fix z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@
 }
 
 #stream_jwtform .header {
+  z-index: 1;
   width: 100%;
   justify-content: center;
 }
